--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,7 @@
 # Change these first
 owner: marcosdid # Your GitHub organization or username, where this repository lives
 repo: uptime-teste # The name of this repository
+user-agent: koj-co
 
 sites:
   - name: Google
