--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,6 +17,7 @@ status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   baseUrl: /uptime-teste
+  name: ''
   # baseUrl: /your-repo-name
   logoUrl: https://app.kompa.com.br/static/img/logo.png
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
